Random move bot now implemented

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       <button id="startBtn" class="btn btn-primary">Start Position</button>
       <button id="clearBtn" class ="btn btn-primary">Clear Board</button>
     </div>
-    <script src="./board.js"></script>
+    <script type="module" src="./board.js"></script>
 
     <!-- Bootstrap scripts-->
     <script
