--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./chessboardFiles/css/chessboard-1.0.0.min.css" />
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="./chessboardFiles/js/chessboard-1.0.0.js"></script>
@@ -16,16 +17,28 @@
     />
     <title>Untitled</title>
   </head>
-  <body>
+
+  <!-- Body -->
+  <body id="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- React element -->
     <div id="root"></div>
+
+    <!-- Non react elements -->
     <div id="non-react" style="position: absolute; left: 0px; top: 0px">
       <div id="board1" style="width: 400px"></div>
       <button id="startBtn" class="btn btn-primary">Start Position</button>
       <button id="clearBtn" class ="btn btn-primary">Clear Board</button>
     </div>
     <script type="module" src="./board.js"></script>
-
+    
+    <!-- Chess.js library -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.js"
+      integrity="sha384-s3XgLpvmHyscVpijnseAmye819Ee3yaGa8NxstkJVyA6nuDFjt59u1QvuEl/mecz"
+      crossorigin="anonymous"
+    ></script>
+    
     <!-- Bootstrap scripts-->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
