the problem is chrome

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <!-- Non react elements -->
     <div id="non-react">
-      <div id="board1" style="width: 500px"></div>
+      <div id="board1"></div>
       <button id="startBtn" class="btn btn-primary">Start Position</button>
       <button id="clearBtn" class="btn btn-primary">Clear Board</button>
       <button id="flipBtn" class="btn btn-primary">Flip Colour</button>
